| Bug #48163 | Partitions: dagger duplication | ||
|---|---|---|---|
| Submitted: | 19 Oct 2009 18:19 | Modified: | 15 Nov 2009 13:33 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.4.3-beta | OS: | Linux (SUSE 11.1 64-bit) |
| Assigned to: | Target Version: | ||
| Triage: | Triaged: D2 (Serious) | ||
[19 Oct 2009 19:41]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[22 Oct 2009 14:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/87778 2897 Mikael Ronstrom 2009-10-22 A lot of fixes to make character set work ok, first step to fixing BUG#48163 modified: mysql-test/r/partition_column.result mysql-test/t/partition_column.test sql/mysql_priv.h sql/partition_info.cc sql/partition_info.h sql/share/errmsg.txt sql/sql_partition.cc sql/sql_partition.h sql/sql_show.cc sql/sql_table.cc
[22 Oct 2009 16:19]
Mikael Ronstrom
Added character set identifiers to character constants in frm file to ensure character set info stays
[5 Nov 2009 6:51]
Bugs System
Pushed into 6.0.14-alpha (revid:mikael@mysql.com-20091104090210-om5lq1v39ppduu0e) (version source revid:mikael@mysql.com-20091030163450-387z4yevx0lrj3fb) (merge vers: 6.0.14-alpha) (pib:13)
[12 Nov 2009 8:19]
Bugs System
Pushed into 5.5.0-beta (revid:alik@sun.com-20091110093229-0bh5hix780cyeicl) (version source revid:mikael@mysql.com-20091028172236-0v5j962mh2opxpkj) (merge vers: 5.5.0-beta) (pib:13)
[15 Nov 2009 13:33]
Jon Stephens
Bug doesn't appear in a release; no changelog entry needed. Closed.

Description: I'm using mysql-trunk-wl3352. I try to create a partitioned table with a space and a dagger. I fail. How to repeat: /* 0x2020 is dagger in ucs2 */ drop table if exists t9; create table t9 (s1 varchar(2) character set ucs2) partition by list column_list(s1) (partition p1 values in (column_list(0x2020)), partition p2 values in (column_list(' '))); insert into t9 values ('');