A lot of fixes to make character set work ok, first step to fixing BUG#48163