sql/partition_info.h
@@ -281,6 +281,7 @@ public:
                             bool check_partition_function);
   void print_no_partition_found(TABLE *table);
   void print_debug(const char *str, uint*);
+  Item* get_column_item(Item *item, Field *field);
   int fix_func_partition(THD *thd,
                          part_elem_value *val,
                          partition_element *part_elem,
